--- a/2_decisionTree/Decisiontree2.ipynb
+++ b/2_decisionTree/Decisiontree2.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Vinit/anaconda/lib/python2.7/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +159,7 @@
        "4     2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -192,26 +201,51 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "clf = tree.DecisionTreeClassifier()\n",
-    "\n",
+    "# clf = tree.DecisionTreeClassifier()\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
     "clf = clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Accuracy is ', 87.5)\n"
+      "13    0\n",
+      "28    1\n",
+      "1     1\n",
+      "26    1\n",
+      "5     0\n",
+      "18    1\n",
+      "29    1\n",
+      "17    1\n",
+      "Name: am, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = clf.predict(X_test)\n",
+    "print y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Accuracy is ', 62.5)\n"
      ]
     }
    ],
